# substrate-package

./: .gitattributes  .gitmodules  README.md  RELEASES.md  get-substrate-dependencies.sh  substrate-package-rename.sh
flipper/: build.sh
ink-contract-template/: Cargo.toml
ink-contract-template/src/: lib.rs
substrate-front-end-template/src/: App.jsx
substrate-module-template/: Cargo.toml  HOWTO.md  README.md
substrate-module-template/src/: lib.rs
substrate-node-template/: .gitignore  Cargo.toml  README.md
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: demo.rs  lib.rs  template.rs
substrate-node-template/runtime/wasm/: Cargo.toml  build.sh
substrate-node-template/runtime/wasm/src/: lib.rs
substrate-node-template/scripts/: init.sh
substrate-node-template/src/: chain_spec.rs  cli.rs  main.rs
substrate-ui/src/: app.jsx
