[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies.ink_core]
git = "https://github.com/paritytech/ink"
package = "ink_core"
rev = "efe69028cc5bd9ec86bfc15f52162b39c560c194"

[dependencies.ink_model]
git = "https://github.com/paritytech/ink"
package = "ink_model"
rev = "efe69028cc5bd9ec86bfc15f52162b39c560c194"

[dependencies.ink_lang]
git = "https://github.com/paritytech/ink"
package = "ink_lang"
rev = "efe69028cc5bd9ec86bfc15f52162b39c560c194"

[dependencies.parity-codec]
version = "3.3"
default-features = false
features = ["derive"]

[lib]
name = "flipper"
crate-type = ["cdylib"]

[features]
default = []
test-env = [
    "ink_core/test-env",
    "ink_model/test-env",
    "ink_lang/test-env",
]
generate-api-description = [
    "ink_lang/generate-api-description"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
