[package]
name = "substrate-module-template"
version = "0.1.0"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'support/std',
    'system/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dev-dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dev-dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'
