[package]
name = "substrate-module-template"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'sr-primitives/std',
    'runtime-io/std',
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '3dedd246c62255ba6f9b777ecba318dfc2078d85'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '3dedd246c62255ba6f9b777ecba318dfc2078d85'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '3dedd246c62255ba6f9b777ecba318dfc2078d85'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '3dedd246c62255ba6f9b777ecba318dfc2078d85'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3dedd246c62255ba6f9b777ecba318dfc2078d85'
