[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime'
version = '0.9.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'fees/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.fees]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-fees'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'
