[package]
authors = ['Anonymous']
edition = '2018'
name = 'node-template-runtime'
version = '2.0.0'

[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]
[dependencies.babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '337a0b22aaa42e4210d59091d4d95ad75dbb02f3'
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'
