[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '1.0.0'
[dependencies.node-template-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['node-template-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
