[lib]
crate-type = ['cdylib']

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[features]
default = []
std = ['node-template-runtime/std']
[dependencies.node-template-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'
